manifest/32.nginx-deployment.yaml
# nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d
            - name: html-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: config-volume
          configMap:
            name: nginx-config
        - name: html-volume
          configMap:
            name: nginx-html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: hello
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # 서비스 외부에서 접근할 포트
      targetPort: 80 # Pod에서 노출할 포트
  type: ClusterIP
