manifest/90.nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: hello
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: fastapi.local # 로컬 테스트용 도메인 (실제 배포 시에는 실제 도메인으로 변경 필요)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service # nginx-service로 연결
                port:
                  number: 80
